bin_PROGRAMS = cxxstats 
#bin_SOURCES = cxxstats.cc  mcstats.cc  parse.cc  test_cxxstats.cc
check_PROGRAMS = text_cxxstats

cxxstats_LDADD = -lreadline
cxxstats_SOURCES = cxxstats.cc mcstats.cc parse.cc


# mcstats_SOURCES = mcstats.cc

test_cxxstats_SOURCES = test_cxxstats.cc mcstats.cc

#AM_TESTS_ENVIRONMENT = test_cxxstats
#AM_TESTS_FD_REDIRECT = 9>&2
#TESTS = test_cxxstats

